--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "angular-calendar": "^0.31.1",
     "bootstrap": "^5.3.6",
+    "date-fns": "^4.1.0",
     "font-awesome": "^4.7.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
